# srlinux-poc

./: .gitignore  Makefile  README.md  acl-test-inventory.yml  acl-test-nornir-config.yaml  acl-test-topo.yml  ansible-inventory.yml  config.yaml  config_dc1.sh  config_rack1.sh  config_zur1.sh  config_zur1_cr_only.sh  dc1.yml  doc-links.md  jsonrpc_fetch.py  pyproject.toml  test_bgp_peers.py  test_core_bgp_peers.py  test_core_interfaces.py  test_fabric_bgp_peers.py  test_fabric_interfaces.py  zur1-cr-ed.yml  zur1-cr-fab.yml  zur1.yml
acl-test/: Makefile  README.md  acl-test-inventory.yml  acl-test-nornir-config.yaml  acl-test-topo.yml  add-saved-objects.sh  baseline_acl_test_topo.py  push-acl-tests.py  requirements.txt
alpine-host/: Dockerfile  entrypoint.sh
ci/: ping-test-lag.sh
configs/: acl-test-lf1.yml  cr1.yml  cr2.yml  cr3.yml  ed1.cfg  ed1.cfg.md-cli  ed2.cfg  ed2.cfg.md-cli  interfaces.cab1-dbsrv1  interfaces.cab1-hapsrv1  interfaces.cab1-srv1  interfaces.cab1-websrv1  interfaces.cab2-dbsrv2  interfaces.cab2-hapsrv2  interfaces.cab2-websrv2  interfaces.cab3-dbsrv3  interfaces.cab3-hapsrv3  interfaces.cab3-websrv3  lf01.cnf  lf02.cnf  lf03.cnf  lf04.cnf  lf05.cnf  lf06.cnf  pod1-cab1-srv1.sh  pod1-cab2-srv1.sh  pod1-cab3-srv1.sh  pod1-interfaces.yml  pod1-lf01.yml  pod1-lf02.yml  pod1-lf03.yml  pod1-lf05.yml  pod1-lf06.yml  pod1-lf1-interfaces.yml  pod1-lf1-network-instance-vrf-default.yml  pod1-lf1.yml  pod1-lf2-interfaces.yml  pod1-lf2-network-instance-vrf-default.yml  pod1-lf2-network-instance-vrf-routing.yml  pod1-lf2.yml  (+41 more)
inventory/: hosts.yaml
(+37 files in other folders)
